--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "frost-checkbox",
-  "version": "0.0.0",
-  "description": "The default blueprint for ember-cli addons.",
+  "version": "1.0.0",
+  "description": "The Frost framework checkbox component",
   "directories": {
     "doc": "doc",
     "test": "tests"
