--- a/package.json
+++ b/package.json
@@ -21,27 +21,28 @@
     "broccoli-asset-rev": "2.1.2",
     "ember-cli": "1.13.8",
     "ember-cli-app-version": "0.5.0",
+    "ember-cli-blanket": "0.5.4",
     "ember-cli-content-security-policy": "0.4.0",
     "ember-cli-dependency-checker": "1.0.1",
+    "ember-cli-github-pages": "0.0.6",
     "ember-cli-htmlbars-inline-precompile": "0.2.0",
     "ember-cli-ic-ajax": "0.2.1",
     "ember-cli-inject-live-reload": "1.3.1",
+    "ember-cli-mirage": "0.1.8",
+    "ember-cli-mocha": "0.9.3",
+    "ember-cli-notifications": "2.1.1",
     "ember-cli-release": "0.2.5",
     "ember-cli-sri": "1.0.3",
     "ember-cli-uglify": "1.0.1",
     "ember-data": "2.0.0",
     "ember-disable-proxy-controllers": "1.0.1",
     "ember-export-application-global": "1.0.3",
-    "ember-try": "0.0.8",
-    "frost-cli": "1.0.2",
-    "ember-cli-blanket": "0.5.4",
-    "ember-cli-mirage": "0.1.8",
-    "ember-cli-mocha": "0.9.3",
-    "ember-cli-notifications": "2.1.1",
     "ember-lodash": "0.0.5",
     "ember-truth-helpers": "1.1.0",
-    "liquid-fire": "0.21.2",
-	"frost-tabs" : "2.0.2"
+    "ember-try": "0.0.8",
+    "frost-cli": "1.0.2",
+    "frost-tabs": "2.0.2",
+    "liquid-fire": "0.21.2"
   },
   "keywords": [
     "ember-addon"
