--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "frost-checkbox",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "The Frost framework checkbox component",
   "directories": {
     "doc": "doc",
     "test": "tests"
   },
   "scripts": {
-    "build": "ember build",
     "start": "ember server",
+    "build": "ember build",
     "test": "ember try:testall"
   },
   "repository": "https://stash.ciena.com/scm/nms_frost/frost-checkbox.git",
@@ -18,40 +18,37 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "broccoli-asset-rev": "2.1.2",
-    "ember-cli": "1.13.8",
-    "ember-cli-app-version": "0.5.0",
+    "broccoli-asset-rev": "^2.2.0",
+    "ember-cli": "1.13.13",
+    "ember-cli-app-version": "^1.0.0",
+    "ember-cli-blanket": "0.6.2",
     "ember-cli-content-security-policy": "0.4.0",
-    "ember-cli-dependency-checker": "1.0.1",
-    "ember-cli-htmlbars-inline-precompile": "0.2.0",
-    "ember-cli-ic-ajax": "0.2.1",
+    "ember-cli-dependency-checker": "^1.1.0",
+    "ember-cli-htmlbars-inline-precompile": "^0.3.1",
+    "ember-cli-ic-ajax": "0.2.4",
     "ember-cli-inject-live-reload": "1.3.1",
-    "ember-cli-release": "0.2.5",
-    "ember-cli-sri": "1.0.3",
-    "ember-cli-uglify": "1.0.1",
-    "ember-data": "2.0.0",
-    "ember-disable-proxy-controllers": "1.0.1",
-    "ember-export-application-global": "1.0.3",
-    "ember-try": "0.0.8",
-    "frost-cli": "1.0.2",
-    "ember-cli-blanket": "0.5.4",
-    "ember-cli-mirage": "0.1.8",
-    "ember-cli-mocha": "0.9.3",
-    "ember-cli-notifications": "2.1.1",
-    "ember-lodash": "0.0.5",
-    "ember-truth-helpers": "1.1.0",
-    "liquid-fire": "0.21.2"
+    "ember-cli-mirage": "0.1.11",
+    "ember-cli-mocha": "0.9.7",
+    "ember-cli-notifications": "2.1.3",
+    "ember-cli-release": "0.2.8",
+    "ember-cli-sri": "^1.2.0",
+    "ember-cli-uglify": "^1.2.0",
+    "ember-data": "2.2.0",
+    "ember-disable-proxy-controllers": "^1.0.1",
+    "ember-export-application-global": "^1.0.4",
+    "ember-lodash": "^0.0.6",
+    "ember-truth-helpers": "^1.2.0",
+    "ember-try": "~0.0.8"
   },
   "keywords": [
     "ember-addon"
   ],
   "dependencies": {
-    "ember-cli-babel": "5.1.3",
-    "broccoli-funnel": "0.2.8",
-    "broccoli-merge-trees": "0.2.3",
-    "broccoli-sass": "0.6.6",
-    "ember-cli-htmlbars": "0.7.9",
-    "frost-css": "^1.0.12"
+    "ember-cli-babel": "^5.1.5",
+    "ember-cli-htmlbars": "^1.0.1",
+    "ember-cli-sass": "5.1.0",
+    "frost-css": "~1.1.0",
+    "frost-svg": "~1.1.1"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config"
