Integrated with new CI System
This is a #PATCH# change

--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,8 @@
 # misc
 /.sass-cache
 /connect.lock
-/coverage/*
+/coverage/coverage.json
+/coverage/lcov.info
 /libpeerconnection.log
 npm-debug.log
 testem.log
