--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "ember-disable-proxy-controllers": "^1.0.1",
     "ember-export-application-global": "^1.0.4",
     "ember-lodash": "^0.0.6",
+    "ember-one-way-controls": "0.4.0",
     "ember-truth-helpers": "^1.2.0",
     "ember-try": "~0.0.8",
     "fr-cli-bump": "^0.6.3",
