--- a/bower.json
+++ b/bower.json
@@ -1,25 +1,22 @@
 {
   "name": "frost-checkbox",
   "dependencies": {
-    "ember": "2.2.0",
-    "ember-cli-shims": "ember-cli/ember-cli-shims#0.0.3",
-    "ember-cli-test-loader": "ember-cli/ember-cli-test-loader#0.1.3",
-    "ember-data": "2.2.0",
-    "ember-load-initializers": "0.1.7",
-    "ember-resolver": "~0.1.20",
-    "jquery": "2.1.4",
-    "loader.js": "ember-cli/loader.js#3.2.1",
+    "blanket": "1.1.7",
     "bourbon": "4.2.6",
+    "ember": "2.2.0",
+    "ember-cli-shims": "ember-cli/ember-cli-shims#0.1.0",
+    "ember-cli-test-loader": "ember-cli/ember-cli-test-loader#0.1.3",
     "ember-inflector": "1.3.1",
-    "ember-mocha": "0.8.7",
+    "ember-load-initializers": "0.1.7",
+    "ember-mocha": "0.8.8",
+    "ember-resolver": "0.1.20",
     "Faker": "3.0.1",
+    "jquery": "2.1.4",
+    "loader.js": "ember-cli/loader.js#3.3.0",
     "lodash": "3.10.1",
     "pretender": "0.10.1"
   },
   "resolutions": {
     "ember": "2.2.0"
-  },
-  "devDependencies": {
-    "blanket": "1.1.7"
   }
 }
