--- a/package.json
+++ b/package.json
@@ -41,13 +41,14 @@
     "ember-data": "2.3.3",
     "ember-disable-proxy-controllers": "1.0.1",
     "ember-export-application-global": "1.0.5",
+    "ember-frost-css-core": "0.2.1",
+    "ember-frost-theme": "0.2.0",
     "ember-lodash": "0.0.6",
     "ember-truth-helpers": "1.2.0",
     "ember-try": "0.1.2",
     "eslint": "1.10.3",
     "eslint-config-frost-standard": "0.2.5",
-    "fr-cli-bump": "0.6.8",
-    "frost-tabs": "2.1.1"
+    "fr-cli-bump": "0.6.8"
   },
   "keywords": [
     "ember-addon"
@@ -56,8 +57,7 @@
     "ember-cli-babel": "^5.1.5",
     "ember-cli-htmlbars": "^1.0.1",
     "ember-cli-sass": "^5.1.0",
-    "ember-one-way-controls": "^0.5.0",
-    "frost-css": "^1.1.0"
+    "ember-one-way-controls": "^0.5.0"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config"
