--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,7 @@ install:
 - npm install
 - bower install
 after_success:
-- sed -i -- 's/SF:my-addon-name\/\(.*\)/SF:addon\/\1.js/' coverage/lcov.info && rm
-  -f coverage/lcov.info--
+- sed -i -- 's/SF:my-addon-name\/\(.*\)/SF:addon\/\1.js/' coverage/lcov.info && rm -f coverage/lcov.info--
 - cat coverage/lcov.info | coveralls
 env:
   matrix:
