--- a/package.json
+++ b/package.json
@@ -1,25 +1,29 @@
 {
-  "name": "frost-checkbox",
-  "version": "1.2.7",
+  "name": "ember-frost-checkbox",
+  "version": "0.0.1",
   "description": "The Frost framework checkbox component",
   "directories": {
     "doc": "doc",
     "test": "tests"
   },
   "scripts": {
-    "check-version-bump": "fr-bump check BP_FROST frost-checkbox",
-    "prefr-publish": "fr-bump BP_FROST frost-checkbox",
-    "fr-publish": "npm publish .",
+    "lint": "eslint .",
     "start": "ember server",
     "build": "ember build",
-    "lint": "eslint .",
-    "test": "npm run lint && ember test"
+    "test": "npm run-script lint && ember test"
   },
-  "repository": "ssh://git@bitbucket.ciena.com/BP_FROST/frost-checkbox.git",
+  "repository": "git@github.com:ciena-frost/ember-frost-checkbox.git",
   "engines": {
-    "node": ">= 0.10.0"
+    "node": ">= 5.0.0"
   },
-  "author": "",
+  "author": "Steven Glanzer (https://github.com/sglanzer)",
+  "contributors": [
+    "Roxanne Panthaky (https://github.com/rox163)",
+    "Gosia Hyndman (https://github.com/vesper2000)",
+    "Adam Meadows (https://github.com/job13er)",
+    "Matt Dahl (https://github.com/sandersky)",
+    "Chris Stoll (https://github.com/cstolli)"
+  ],
   "license": "MIT",
   "devDependencies": {
     "broccoli-asset-rev": "2.4.2",
@@ -28,11 +32,9 @@
     "ember-cli-blanket": "0.8.0",
     "ember-cli-content-security-policy": "0.5.0",
     "ember-cli-dependency-checker": "1.2.0",
-    "ember-cli-github-pages": "0.0.7",
     "ember-cli-htmlbars-inline-precompile": "0.3.1",
     "ember-cli-ic-ajax": "0.2.4",
     "ember-cli-inject-live-reload": "1.4.0",
-    "ember-cli-mirage": "0.1.11",
     "ember-cli-mocha": "0.10.0",
     "ember-cli-notifications": "2.1.3",
     "ember-cli-release": "0.2.8",
@@ -41,27 +43,25 @@
     "ember-data": "2.3.3",
     "ember-disable-proxy-controllers": "1.0.1",
     "ember-export-application-global": "1.0.5",
-    "ember-frost-css-core": "0.2.1",
-    "ember-frost-theme": "0.2.0",
     "ember-lodash": "0.0.6",
     "ember-truth-helpers": "1.2.0",
     "ember-try": "0.1.2",
-    "eslint": "1.10.3",
-    "eslint-config-frost-standard": "0.2.5"
+    "eslint": "^1.10.3",
+    "eslint-config-frost-standard": "^0.2.5"
   },
   "keywords": [
-    "ember-addon"
+    "ember-addon",
+    "frost"
   ],
   "dependencies": {
     "ember-cli-babel": "^5.1.5",
     "ember-cli-htmlbars": "^1.0.1",
     "ember-cli-sass": "^5.1.0",
+    "ember-frost-css-core": "^0.3.0",
+    "ember-frost-theme": "^0.3.0",
     "ember-one-way-controls": "^0.5.0"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config"
-  },
-  "publishConfig": {
-    "registry": "https://artifactory.ciena.com/api/npm/blueplanet-npm"
   }
 }
