--- a/package.json
+++ b/package.json
@@ -41,8 +41,8 @@
     "ember-data": "2.3.3",
     "ember-disable-proxy-controllers": "1.0.1",
     "ember-export-application-global": "1.0.5",
-    "ember-frost-css-core": "0.2.1",
-    "ember-frost-theme": "0.2.0",
+    "ember-frost-css-core": "0.3.0",
+    "ember-frost-theme": "0.4.0",
     "ember-lodash": "0.0.6",
     "ember-truth-helpers": "1.2.0",
     "ember-try": "0.1.2",
@@ -56,6 +56,8 @@
     "ember-cli-babel": "^5.1.5",
     "ember-cli-htmlbars": "^1.0.1",
     "ember-cli-sass": "^5.1.0",
+    "ember-frost-css-core": "^1.0.0",
+    "ember-frost-theme": "^1.0.1",
     "ember-one-way-controls": "^0.5.0"
   },
   "ember-addon": {
