--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ember-frost-checkbox",
   "version": "1.0.0",
   "description": "The Frost framework checkbox component",
+  "frostGuideDirectory": "ui-components/button-controls/checkbox",
   "directories": {
     "doc": "doc",
     "test": "tests"
