removing blueprints dir

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "tests"
   },
   "scripts": {
-    "lint": "eslint . blueprints",
+    "lint": "eslint .",
     "start": "ember server",
     "build": "ember build",
     "test": "npm run-script lint && ember test"
