--- a/package.json
+++ b/package.json
@@ -22,33 +22,34 @@
     "Roxanne Panthaky (https://github.com/rox163)",
     "Gosia Hyndman (https://github.com/vesper2000)",
     "Adam Meadows (https://github.com/job13er)",
-    "Matt Dahl (https://github.com/sandersky)",
+    "Matthew Dahl (https://github.com/sandersky)",
     "Chris Stoll (https://github.com/cstolli)"
   ],
   "license": "MIT",
   "devDependencies": {
     "broccoli-asset-rev": "2.4.2",
-    "ember-cli": "1.13.15",
+    "ember-cli": "^2.4.2",
     "ember-cli-app-version": "1.0.0",
-    "ember-cli-blanket": "0.8.0",
+    "ember-cli-blanket": "0.9.1",
     "ember-cli-content-security-policy": "0.5.0",
     "ember-cli-dependency-checker": "1.2.0",
     "ember-cli-htmlbars-inline-precompile": "0.3.1",
     "ember-cli-ic-ajax": "0.2.4",
     "ember-cli-inject-live-reload": "1.4.0",
-    "ember-cli-mocha": "0.10.0",
-    "ember-cli-notifications": "2.1.3",
-    "ember-cli-release": "0.2.8",
-    "ember-cli-sri": "1.2.0",
+    "ember-cli-mocha": "0.10.1",
+    "ember-cli-notifications": "3.2.0",
     "ember-cli-uglify": "1.2.0",
-    "ember-data": "2.3.3",
+    "ember-data": "2.4.0",
     "ember-disable-proxy-controllers": "1.0.1",
     "ember-export-application-global": "1.0.5",
+    "ember-load-initializers": "^0.5.1",
     "ember-lodash": "0.0.6",
+    "ember-resolver": "^2.0.3",
     "ember-truth-helpers": "1.2.0",
     "ember-try": "0.2.0",
-    "eslint": "^1.10.3",
-    "eslint-config-frost-standard": "^0.2.5"
+    "eslint": "2.2.0",
+    "eslint-config-frost-standard": "^1.0.0",
+    "loader.js": "^4.0.1"
   },
   "keywords": [
     "ember-addon",
