--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "frost-checkbox",
+  "name": "ember-frost-checkbox",
   "dependencies": {
     "ember": "2.4.2",
     "ember-cli-shims": "^0.1.0",
