--- a/bower.json
+++ b/bower.json
@@ -1,21 +1,21 @@
 {
-  "name": "frost-checkbox",
+  "name": "ember-frost-checkbox",
   "dependencies": {
-    "blanket": "1.1.7",
-    "ember": "2.2.0",
-    "ember-cli-shims": "ember-cli/ember-cli-shims#0.1.0",
-    "ember-cli-test-loader": "ember-cli/ember-cli-test-loader#0.1.3",
+    "ember": "~2.3.0",
+    "ember-cli-shims": "0.1.0",
+    "ember-cli-test-loader": "0.2.2",
     "ember-inflector": "1.3.1",
-    "ember-load-initializers": "0.1.7",
-    "ember-mocha": "0.8.8",
-    "ember-resolver": "0.1.20",
+    "ember-mocha": "~0.8.11",
     "Faker": "3.0.1",
-    "jquery": "2.1.4",
-    "loader.js": "ember-cli/loader.js#3.3.0",
-    "lodash": "3.10.1",
-    "pretender": "0.10.1"
+    "lodash": "~4.5.0",
+    "perfect-scrollbar": "~0.6.10",
+    "pretender": "~0.12.0",
+    "sinonjs": "1.17.1"
   },
   "resolutions": {
-    "ember": "2.2.0"
+    "ember": "~2.3.0"
+  },
+  "devDependencies": {
+    "blanket": "5e94fc30f2e694bb5c3718ddcbf60d467f4b4d26"
   }
 }
