--- a/package.json
+++ b/package.json
@@ -46,8 +46,8 @@
     "ember-export-application-global": "^1.0.5",
     "ember-frost-button": "1.4.1",
     "ember-frost-css-core": "^1.1.2",
-    "ember-frost-icons": "1.4.0",
-    "ember-frost-theme": "1.3.1",
+    "ember-frost-icons": "^1.4.0",
+    "ember-frost-theme": "^1.3.1",
     "ember-load-initializers": "^0.5.0",
     "ember-lodash": "~0.0.6",
     "ember-resolver": "^2.0.3",
