--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "test": "tests"
   },
   "scripts": {
-    "lint": "eslint .",
     "start": "ember server",
     "build": "ember build",
-    "test": "npm run-script lint && ember test"
+    "lint": "eslint *.js addon app blueprints config tests",
+    "test": "npm run lint && ember test"
   },
   "repository": "git@github.com:ciena-frost/ember-frost-checkbox.git",
   "engines": {
